mock AI path generation on button click

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "openai": "^6.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
