--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "heic2any": "^0.0.4",
     "openai": "^6.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
