--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "heic2any": "^0.0.4",
+    "html-to-image": "^1.11.13",
     "openai": "^6.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
